--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <ul class="highlights list-unstyled">
             <li>
                 <h4><a target="_blank" href="http://coinledger.io"><img src="/images/coinledger.png" width="210" height="33" alt="Coin Ledger"></a></h4>
-                <p class="lead">I built this as a way for me to keep track of my Bitcoin portfolio so that I could know the true value over time.</p>
+                <p class="lead">I build this as a way to keep track of my Bitcoin transactions, which are spread across a few different wallets and exchanges.</p>
             </li>
             <li>
                 <h4><a target="_blank" href="http://talkto.com"><img src="/images/talkto.png" width="152" height="33" alt="TalkTo"></a></h4>
