--- a/index.html
+++ b/index.html
@@ -155,12 +155,16 @@
 
         <ul class="highlights list-unstyled">
             <li>
+                <h4><a target="_blank" href="http://www.creativelive.com/"><img src="/images/creativelive.png" width="318" height="24" alt="CreativeLive"></a></h4>
+                <p class="lead">Just started at CreativeLive on May 5. More updates on what I'm doing there soon.</p>
+            </li>
+            <li>
                 <h4><a target="_blank" href="http://coinledger.io"><img src="/images/coinledger.png" width="210" height="33" alt="Coin Ledger"></a></h4>
                 <p class="lead">I built this as a way to keep track of my Bitcoin transactions, which are spread across a few different wallets and exchanges.</p>
             </li>
             <li>
                 <h4><a target="_blank" href="http://talkto.com"><img src="/images/talkto.png" width="152" height="33" alt="TalkTo"></a></h4>
-                <p class="lead">For this last few years, I've been working with a startup based in Cambridge, MA. We make an app (<a target="_blank" href="http://talkto.com/app/apple">Apple</a>/<a target="_blank" href="http://talkto.com/app/android">Android</a>) that lets consumers send a message to any business in North America and get a text response in minutes. I built the consumer website, a web application for our call center, and the Android app. I also do anything else that needs doing.</p>
+                <p class="lead">I worked with a startup based in Cambridge, MA for a few years. We made an <a target="_blank" href="http://talkto.com/app/apple">app</a> that lets consumers send a message to any business in North America and get a text response in minutes. I built the consumer website, a web application for our call center, and the Android app. I also do anything else that needs doing.</p>
             </li>
             <li>
                 <h4><a target="_blank" href="http://kobofunds.com"><img src="/images/kobo.png" width="220" height="66" alt="Kobo Funds"></a></h4>
@@ -192,11 +196,19 @@
     name: "James Byrum",
     experience: [
         {
+            company:    "CreativeLive",
+            url:        "http://www.creativelive.com/",
+            location:   "San Francisco, CA",
+            start_date: "2014-05-05",
+            end_date:   undefined,
+            job_title:  "Sr. Software Engineer"
+        },
+        {
             company:    "TalkTo",
             url:        "http://talkto.com",
             location:   "Cambridge, MA",
             start_date: "2010-11-16",
-            end_date:   undefined,
+            end_date:   "2014-04-18",
             job_title:  "Engineer",
             summary:    "Built TalkTo from the ground up with the\
                         co-founders. Initially doing only web\
