--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Quicksand:300,400">
-<link rel="stylesheet" href="/css/bootstrap.min.css">
-<link rel="stylesheet" href="/css/font-awesome.min.css">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 <link href='/css/global.css' rel='stylesheet' type='text/css'>
 <link href='/css/large.css' rel='stylesheet' type='text/css'>
 <link href='/css/small.css' rel='stylesheet' type='text/css'>
@@ -355,9 +355,9 @@
 </div>
 
 <script src="/js/modernizr.js"></script>
-<script src="/js/jquery.min.js"></script>
-<script src="/js/bootstrap.min.js"></script>
-<script src="/js/underscore.min.js" type="text/javascript"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js" type="text/javascript"></script>
 <script src="/js/jquery.scrollto.min.js" type="text/javascript"></script>
 <script src="/js/jquery.touchswipe.js" type="text/javascript"></script>
 <script src="/lib/vault/vault.min.js" type="text/javascript"></script>
