--- a/index.html
+++ b/index.html
@@ -183,8 +183,13 @@
         <h2>GitHub / <a target="_blank" href="https://github.com/jimmybyrum">jimmybyrum</a></h2>
         <p class="lead">I have a couple small Javascript repos that are public and potentially useful.</p>
         <ul class="repos list-unstyled">
-            <li><a target="_blank" href="https://github.com/jimmybyrum/vault.js">Vault.js</a> is a wrapper for localStorage, sessionStorage and document.cookie that sets and gets true javascript vars, objects, etc.</a></li>
-            <li><a target="_blank" href="https://github.com/jimmybyrum/crosshatch.js">Crosshatch.js</a> is a library to manage #! urls. Since creating this, I've switched to using Backbone which has this built in. That said, crosshatch is handy for very lightweight URL management.</a></li>
+            <li>
+                <a target="_blank" href="https://github.com/jimmybyrum/vault.js">Vault.js</a> is a library for Key-Value Storage of true data types for the browser and node</a>
+                <a href="https://nodei.co/npm/vault.js/"><img src="https://nodei.co/npm/vault.js.png?compact=true"></a>
+            </li>
+            <li>
+                <a target="_blank" href="https://github.com/jimmybyrum/voice-commands.js">Voice-Commands.js</a> is a library for managing voice commands on a website.</a>
+            </li>
             <li><a target="_blank" href="https://github.com/jimmybyrum/website">This website</a> on GitHub</li>
         </ul>
 
