--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <ul class="repos list-unstyled">
             <li>
                 <a target="_blank" href="https://github.com/jimmybyrum/vault.js">Vault.js</a> is a library for Key-Value Storage of true data types for the browser and node</a>
-                <a href="https://nodei.co/npm/vault.js/"><img src="https://nodei.co/npm/vault.js.png?compact=true"></a>
+                <a target="_blank" href="https://nodei.co/npm/vault.js/"><img src="https://nodei.co/npm/vault.js.png?compact=true"></a>
             </li>
             <li>
                 <a target="_blank" href="https://github.com/jimmybyrum/voice-commands.js">Voice-Commands.js</a> is a library for managing voice commands on a website.</a>
