--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             location:   "San Francisco, CA",
             start_date: "2014-05-05",
             end_date:   undefined,
-            job_title:  "Sr. Software Engineer"
+            job_title:  "Lead Engineer"
         },
         {
             company:    "TalkTo",
@@ -284,12 +284,12 @@
         "HTML5", "CSS3", "Javascript",
         "WebRTC", "SIP",
         "Python", "Django", "Nginx", "Apache",
-        "MySQL", "Redis",
+        "MongoDB", "Redis", "MySQL",
         "Java", "Arduino"
     ],
     libraries: [
-        "Modernizr", "Backbone", "Underscore", "jQuery",
-        "Bootstrap", "Handlebars", "Strophe", "Vault"
+        "Angular", "Modernizr", "Backbone", "Underscore",
+        "Bootstrap", "Handlebars", "jQuery", "Strophe", "Vault"
     ],
     tools: [
         "Sublime Text", "vi", "Eclipse",
