adding google site verification

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+<meta name="google-site-verification" content="Cx_EFu-fpnHoPe1P7OrzcEOhKujodguizHNZViEoTzI" />
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Quicksand:300,400">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
