--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Quicksand:300,400">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-<link href='/css/global.css' rel='stylesheet' type='text/css'>
-<link href='/css/large.css' rel='stylesheet' type='text/css'>
-<link href='/css/small.css' rel='stylesheet' type='text/css'>
-<link href='/css/photos.css' rel='stylesheet' type='text/css'>
+<link href="css/global.css" rel="stylesheet" type="text/css">
+<link href="css/large.css" rel="stylesheet" type="text/css">
+<link href="css/small.css" rel="stylesheet" type="text/css">
+<link href="css/photos.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 
@@ -360,18 +360,18 @@
     <p>For a complete list of commands, say "Help" or type "?".</p>
 </div>
 
-<script src="/js/modernizr.js"></script>
+<script src="js/modernizr.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js" type="text/javascript"></script>
-<script src="/js/jquery.scrollto.min.js" type="text/javascript"></script>
-<script src="/js/jquery.touchswipe.js" type="text/javascript"></script>
-<script src="/lib/vault/vault.min.js" type="text/javascript"></script>
-<script src="/lib/voice/voice-commands.min.js" type="text/javascript"></script>
+<script src="js/jquery.scrollto.min.js" type="text/javascript"></script>
+<script src="js/jquery.touchswipe.js" type="text/javascript"></script>
+<script src="lib/vault/vault.min.js" type="text/javascript"></script>
+<script src="lib/voice/voice-commands.min.js" type="text/javascript"></script>
 <script src="//cdn.jsdelivr.net/ace/1.1.01/min/ace.js" type="text/javascript"></script>
-<script src="/places.js" type="text/javascript"></script>
+<script src="places.js" type="text/javascript"></script>
 <script src="//maps.googleapis.com/maps/api/js?key=AIzaSyAeV2FBqrEPvRSxvDEJzn5stgVU34GaN74&sensor=true" type="text/javascript"></script>
-<script src="/js/homepage.js" type="text/javascript"></script>
-<script src="/js/google-analytics.js" type="text/javascript"></script>
+<script src="js/homepage.js" type="text/javascript"></script>
+<script src="js/google-analytics.js" type="text/javascript"></script>
 </body>
 </html>
