--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en" class="no-js start ha-on">
 <head>
 <title>Jimmy Byrum</title>
-<link rel="icon" href="/images/icon-photo-round.png" type="image/png">
-<link rel="apple-touch-icon-precomposed" href="/images/icon-photo-rounded.png">
+<link rel="icon" href="images/icon-photo-round.png" type="image/png">
+<link rel="apple-touch-icon-precomposed" href="images/icon-photo-rounded.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
@@ -156,27 +156,27 @@
 
         <ul class="highlights list-unstyled">
             <li>
-                <h4><a target="_blank" href="http://www.creativelive.com/"><img src="/images/creativelive.png" width="318" height="24" alt="CreativeLive"></a></h4>
+                <h4><a target="_blank" href="http://www.creativelive.com/"><img src="images/creativelive.png" width="318" height="24" alt="CreativeLive"></a></h4>
                 <p class="lead">Just started at CreativeLive on May 5. More updates on what I'm doing there soon.</p>
             </li>
             <li>
-                <h4><a target="_blank" href="http://coinledger.io"><img src="/images/coinledger.png" width="210" height="33" alt="Coin Ledger"></a></h4>
+                <h4><a target="_blank" href="http://coinledger.io"><img src="images/coinledger.png" width="210" height="33" alt="Coin Ledger"></a></h4>
                 <p class="lead">I built this as a way to keep track of my Bitcoin transactions, which are spread across a few different wallets and exchanges.</p>
             </li>
             <li>
-                <h4><a target="_blank" href="http://talkto.com"><img src="/images/talkto.png" width="152" height="33" alt="TalkTo"></a></h4>
+                <h4><a target="_blank" href="http://talkto.com"><img src="images/talkto.png" width="152" height="33" alt="TalkTo"></a></h4>
                 <p class="lead">I worked with a startup based in Cambridge, MA for a few years. We made an <a target="_blank" href="http://talkto.com/app/apple">app</a> that lets consumers send a message to any business in North America and get a text response in minutes. I built the consumer website, a web application for our call center, and the Android app. I also do anything else that needs doing.</p>
             </li>
             <li>
-                <h4><a target="_blank" href="http://kobofunds.com"><img src="/images/kobo.png" width="220" height="66" alt="Kobo Funds"></a></h4>
+                <h4><a target="_blank" href="http://kobofunds.com"><img src="images/kobo.png" width="220" height="66" alt="Kobo Funds"></a></h4>
                 <p class="lead">I worked with a Designer to build out the Kobo Funds website over a two month period in the summer of 2013.</p>
             </li>
             <li>
-                <h4><a target="_blank" href="http://www.ingles.mineduc.cl/"><img src="/images/minudec.png" width="200" height="71" alt="Chilean Ministry of Education"></a></h4>
+                <h4><a target="_blank" href="http://www.ingles.mineduc.cl/"><img src="images/minudec.png" width="200" height="71" alt="Chilean Ministry of Education"></a></h4>
                 <p class="lead">I took some time off in 2008 to be a volunteer English teacher in Chile. For six months, I taught at Liceo Polivalente Hernando de Magallanes in <a target="_blank" href="http://www.flickr.com/photos/jimmybyrum/sets/72157606769792487/">Porvenir</a>, which is a small town on the Tierra del Fuego. After that, I traveled for six months, starting in <a target="_blank" href="http://www.flickr.com/photos/jimmybyrum/sets/72157611541153932/">Antarctica</a> and then making my way north along the Andes.</p>
             </li>
             <li>
-                <h4><a target="_blank" href="http://yahoo.com"><img src="/images/yahoo.png" width="142" height="37" alt="Yahoo!"></a></h4>
+                <h4><a target="_blank" href="http://yahoo.com"><img src="images/yahoo.png" width="142" height="37" alt="Yahoo!"></a></h4>
                 <p class="lead">I made two versions of the Yahoo! home page back in the day (2004) while working in Sunnyvale, CA. In 2006, I transferred to the London, UK office and worked on the European sites. I also worked on the Starbucks Digital Network project in late 2010 doing mostly mobile web development.</p>
             </li>
         </ul>
