--- a/index.html
+++ b/index.html
@@ -157,7 +157,11 @@
         <ul class="highlights list-unstyled">
             <li>
                 <h4><a target="_blank" href="http://www.creativelive.com/"><img src="images/creativelive.png" width="318" height="24" alt="CreativeLive"></a></h4>
-                <p class="lead">Just started at CreativeLive on May 5. More updates on what I'm doing there soon.</p>
+                <p class="lead"></p>
+            </li>
+            <li>
+                <h4><a target="_blank" href="http://http://currencycheatsheet.com"><img src="images/currency-cheatsheet.png" width="210" alt="Currency Cheatsheet"></a></h4>
+                <p class="lead">While getting into Bitcoin and learning about money, <a target="_blank" href="http://eringallup.info">Erin Gallup</a> and I did a lot of research about money. The result is the Currency Cheatsheet.</p>
             </li>
             <li>
                 <h4><a target="_blank" href="http://coinledger.io"><img src="images/coinledger.png" width="210" height="33" alt="Coin Ledger"></a></h4>
@@ -186,12 +190,11 @@
         <ul class="repos list-unstyled">
             <li>
                 <a target="_blank" href="https://github.com/jimmybyrum/vault.js">Vault.js</a> is a library for Key-Value Storage of true data types for the browser and node</a>
-                <a target="_blank" href="https://nodei.co/npm/vault.js/"><img src="https://nodei.co/npm/vault.js.png?compact=true"></a>
             </li>
             <li>
                 <a target="_blank" href="https://github.com/jimmybyrum/voice-commands.js">Voice-Commands.js</a> is a library for managing voice commands on a website.</a>
             </li>
-            <li><a target="_blank" href="https://github.com/jimmybyrum/website">This website</a> on GitHub</li>
+            <li><a target="_blank" href="https://github.com/jimmybyrum/website/tree/gh-pages">This website</a> on GitHub</li>
         </ul>
 
         <h2><a target="_blank" href="https://docs.google.com/a/jimmybyrum.com/document/d/17UCmeKenZhOTrxTuvhv6TN_egX9dQDeNRul_mgYSs-M/edit">Resume</a> on Google Docs</h2>
