--- a/index.html
+++ b/index.html
@@ -157,11 +157,11 @@
         <ul class="highlights list-unstyled">
             <li>
                 <h4><a target="_blank" href="http://www.creativelive.com/"><img src="images/creativelive.png" width="318" height="24" alt="CreativeLive"></a></h4>
-                <p class="lead"></p>
+                <p class="lead">I'm curently a Lead Engineer at CreativeLive. Most recently I led the creation of a custom CMS and new ecommerce system.</p>
             </li>
             <li>
-                <h4><a target="_blank" href="http://http://currencycheatsheet.com"><img src="images/currency-cheatsheet.png" width="210" alt="Currency Cheatsheet"></a></h4>
-                <p class="lead">While getting into Bitcoin and learning about money, <a target="_blank" href="http://eringallup.info">Erin Gallup</a> and I did a lot of research about money. The result is the Currency Cheatsheet.</p>
+                <h4><a target="_blank" href="http://http://currencycheatsheet.com"><img src="images/currency-cheatsheet.png" width="318" height="45" alt="Currency Cheatsheet"></a></h4>
+                <p class="lead">While getting into Bitcoin, <a target="_blank" href="http://eringallup.info">Erin Gallup</a> and I learned quite a bit about money. We gathered up what we learned into the Currency Cheatsheet.</p>
             </li>
             <li>
                 <h4><a target="_blank" href="http://coinledger.io"><img src="images/coinledger.png" width="210" height="33" alt="Coin Ledger"></a></h4>
