--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <p class="lead">I'm curently a Lead Engineer at CreativeLive. Most recently I led the creation of a custom CMS and new ecommerce system.</p>
             </li>
             <li>
-                <h4><a target="_blank" href="http://http://currencycheatsheet.com"><img src="images/currency-cheatsheet.png" width="318" height="45" alt="Currency Cheatsheet"></a></h4>
+                <h4><a target="_blank" href="http://currencycheatsheet.com"><img src="images/currency-cheatsheet.png" width="318" height="45" alt="Currency Cheatsheet"></a></h4>
                 <p class="lead">While getting into Bitcoin, <a target="_blank" href="http://eringallup.info">Erin Gallup</a> and I learned quite a bit about money. We gathered up what we learned into the Currency Cheatsheet.</p>
             </li>
             <li>
