--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
                 <p class="lead">I built this as a way to keep track of my Bitcoin transactions, which are spread across a few different wallets and exchanges.</p>
             </li>
             <li>
-                <h4><a target="_blank" href="http://talkto.com"><img src="images/talkto.png" width="152" height="33" alt="TalkTo"></a></h4>
-                <p class="lead">I worked with a startup based in Cambridge, MA for a few years. We made an <a target="_blank" href="http://talkto.com/app/apple">app</a> that lets consumers send a message to any business in North America and get a text response in minutes. I built the consumer website, a web application for our call center, and the Android app. I also do anything else that needs doing.</p>
+                <h4><img src="images/talkto.png" width="152" height="33" alt="TalkTo"></h4>
+                <p class="lead">I worked with a startup based in Cambridge, MA for a few years. We made an app that lets consumers send a message to any business in North America and get a text response in minutes. I built the consumer website, a web application for our call center, and the Android app. I also do anything else that needs doing.</p>
             </li>
             <li>
                 <h4><a target="_blank" href="http://kobofunds.com"><img src="images/kobo.png" width="220" height="66" alt="Kobo Funds"></a></h4>
