updating voice and adding cache stack

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <a class="nav-code ha" href="#code">Code</a>
         <span class="underline wrap-content ha"></span>
     </nav>
-    <a id="voice-toggle" class="ha label label-primary" href="#audio">Voice commands <span class="status">off</span></a>
+    <a id="voice-toggle" class="ha label label-primary voice-toggle" href="#audio">Voice commands <span class="status">off</span></a>
 </header>
 <div id="top" name="top" class="section bg-intro ha match-parent vertical horizontal">
     <div id="carousel-example-generic" class="carousel slide match-parent vertical horizontal" data-ride="carousel">
@@ -185,16 +185,18 @@
             </li>
         </ul>
 
-        <h2>GitHub / <a target="_blank" href="https://github.com/jimmybyrum">jimmybyrum</a></h2>
-        <p class="lead">I have a couple small Javascript repos that are public and potentially useful.</p>
+        <p class="lead">Javascript Libraries</p>
         <ul class="repos list-unstyled">
             <li>
-                <a target="_blank" href="https://github.com/jimmybyrum/vault.js">Vault.js</a> is a library for Key-Value Storage of true data types for the browser and node</a>
+                <a target="_blank" href="https://github.com/jimmybyrum/vault.js">Vault.js</a> Key-Value Storage of true data types for the browser and node.
             </li>
             <li>
-                <a target="_blank" href="https://github.com/jimmybyrum/voice-commands.js">Voice-Commands.js</a> is a library for managing voice commands on a website.</a>
+                <a target="_blank" href="https://github.com/jimmybyrum/voice-commands.js">Voice Commands</a> Abstraction layer for adding voice commands to websites.<br>
+                <a href class="voice-toggle" data-voice="on">Use voice commands on this website</a>.
             </li>
-            <li><a target="_blank" href="https://github.com/jimmybyrum/website/tree/gh-pages">This website</a> on GitHub</li>
+            <li>
+                <a target="_blank" href="https://github.com/jimmybyrum/cache-stack">Cache Stack</a> Cache functions (until they expire) and stack callbacks (for longer running functions).
+            </li>
         </ul>
 
         <h2><a target="_blank" href="https://docs.google.com/a/jimmybyrum.com/document/d/17UCmeKenZhOTrxTuvhv6TN_egX9dQDeNRul_mgYSs-M/edit">Resume</a> on Google Docs</h2>
@@ -304,10 +306,9 @@
 </div>
 <footer id="footer" name="footer" class="footer text-center">
     <ul class="social list-unstyled list-inline row wrap-content">
-        <li><a title="Twitter" data-placement="bottom" target="_blank" class="twitter" href="http://twitter.com/jimmybyrum"><i class="fa fa-twitter-square"></i></a></li>
-        <li><a title="Facebook" data-placement="bottom" target="_blank" class="facebook" href="http://facebook.com/jimmybyrum78"><i class="fa fa-facebook-square"></i></a></li>
-        <li><a title="LinkedIn" data-placement="bottom" target="_blank" class="linkedin" href="http://linkedin.com/in/jimmybyrum"><i class="fa fa-linkedin-square"></i></a></li>
         <li><a title="GitHub" data-placement="bottom" target="_blank" class="github" href="http://github.com/jimmybyrum"><i class="fa fa-github-square"></i></a></li>
+        <li><a title="LinkedIn" data-placement="bottom" target="_blank" class="linkedin" href="http://linkedin.com/in/jimmybyrum"><i class="fa fa-linkedin-square"></i></a></li>
+        <li><a title="Twitter" data-placement="bottom" target="_blank" class="twitter" href="http://twitter.com/jimmybyrum"><i class="fa fa-twitter-square"></i></a></li>
         <li><a title="Flickr" data-placement="bottom" target="_blank" class="flickr" href="http://www.flickr.com/photos/jimmybyrum/"><i class="fa fa-flickr"></i></a></li>
         <li><a title="Strava" data-placement="bottom" target="_blank" class="strava" href="http://www.strava.com/athletes/424412"><i class="fa fa-strava-square"></i></a></li>
         <li><a title="me@jimmybyrum.com" data-placement="bottom" target="_blank" class="email" href="mailto:me@jimmybyrum.com?subject=Wow%2C%20what%20an%20amazing%20website%21"><i class="fa fa-pencil-square"></i></a></li>
