--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             </li>
             <li>
                 <a target="_blank" href="https://github.com/jimmybyrum/voice-commands.js">Voice Commands</a> Abstraction layer for adding voice commands to websites.<br>
-                <a href class="voice-toggle" data-voice="on">Use voice commands on this website</a>.
+                <a href class="voice-toggle" data-voice="on">Use voice commands on this website</a>
             </li>
             <li>
                 <a target="_blank" href="https://github.com/jimmybyrum/cache-stack">Cache Stack</a> Cache functions (until they expire) and stack callbacks (for longer running functions).
