--- a/index.html
+++ b/index.html
@@ -286,6 +286,28 @@
             ]
         },
     ],
+    patents: [
+        {
+            publication_number: 'US 8898157 B2',
+            title: 'Systems and methods for providing search relevancy in communication initiation searches',
+            link: 'https://www.google.com/patents/US8898157'
+        },
+        {
+            publication_number: 'US 9015155 B2',
+            title: 'Multi-user communication system and method',
+            link: 'https://www.google.com/patents/US9015155'
+        },
+        {
+            publication_number: 'US 20130268446 A1',
+            title: 'System and method for entry of structured data',
+            link: 'https://www.google.com/patents/US20130268446'
+        },
+        {
+            publication_number: 'US 20130066988 A1',
+            title: 'System and method for establishing presence in a brokered chat system',
+            link: 'https://www.google.com/patents/US20130066988'
+        }
+    ],
     technologies: [
         "HTML5", "CSS3", "Javascript",
         "WebRTC", "SIP",
