adding preemptive confirmation for gandi

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" class="no-js start ha-on">
 <head>
 <title>Jimmy Byrum</title>
+<!-- Hello Gandi! -->
 <link rel="icon" href="images/icon-photo-round.png" type="image/png">
 <link rel="apple-touch-icon-precomposed" href="images/icon-photo-rounded.png">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
