--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <ul class="highlights list-unstyled">
             <li>
                 <h4><a target="_blank" href="http://www.creativelive.com/"><img src="images/creativelive.png" width="318" height="24" alt="CreativeLive"></a></h4>
-                <p class="lead">I'm curently a Lead Engineer at CreativeLive. Most recently I led the creation of a custom CMS and new ecommerce system.</p>
+                <p class="lead">I'm curently an Engineer at CreativeLive.</p>
             </li>
             <li>
                 <h4><a target="_blank" href="http://currencycheatsheet.com"><img src="images/currency-cheatsheet.png" width="318" height="45" alt="Currency Cheatsheet"></a></h4>
@@ -214,7 +214,7 @@
             location:   "San Francisco, CA",
             start_date: "2014-05-05",
             end_date:   undefined,
-            job_title:  "Lead Engineer"
+            job_title:  "Director of Engineer"
         },
         {
             company:    "TalkTo",
