--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             location:   "San Francisco, CA",
             start_date: "2014-05-05",
             end_date:   undefined,
-            job_title:  "Director of Engineer"
+            job_title:  "Director of Engineering"
         },
         {
             company:    "TalkTo",
