--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <ul class="highlights list-unstyled">
             <li>
                 <h4><a target="_blank" href="http://www.creativelive.com/"><img src="images/creativelive.png" width="318" height="24" alt="CreativeLive"></a></h4>
-                <p class="lead">I'm curently an Engineer at CreativeLive.</p>
+                <p class="lead">I'm curently Director of Engineering at CreativeLive.</p>
             </li>
             <li>
                 <h4><a target="_blank" href="http://currencycheatsheet.com"><img src="images/currency-cheatsheet.png" width="318" height="45" alt="Currency Cheatsheet"></a></h4>
