--- a/index.html
+++ b/index.html
@@ -158,15 +158,19 @@
 
         <ul class="highlights list-unstyled">
             <li>
-                <h4><a target="_blank" href="http://www.creativelive.com/"><img src="images/creativelive.png" width="318" height="24" alt="CreativeLive"></a></h4>
+                <h4><a target="_blank" href="https://www.creativelive.com/"><img src="images/creativelive.png" width="318" height="24" alt="CreativeLive"></a></h4>
                 <p class="lead">I'm curently Director of Engineering at CreativeLive.</p>
             </li>
             <li>
+                <h4><a target="_blank" href="https://theboardlist.com"><img src="https://dtlk3t7g5mpz3.cloudfront.net/images/theBoardlist_Logo.png" width="183" height="24" alt="theBoardlist"></a></h4>
+                <p class="lead">Built out the current version of the website and web app for theBoardlist, which is a professional network that facilitates placing women on company boards</p>
+            </li>
+            <!-- <li>
                 <h4><a target="_blank" href="http://currencycheatsheet.com"><img src="images/currency-cheatsheet.png" width="318" height="45" alt="Currency Cheatsheet"></a></h4>
                 <p class="lead">While getting into Bitcoin, <a target="_blank" href="http://eringallup.info">Erin Gallup</a> and I learned quite a bit about money. We gathered up what we learned into the Currency Cheatsheet.</p>
-            </li>
+            </li> -->
             <li>
-                <h4><a target="_blank" href="http://coinledger.io"><img src="images/coinledger.png" width="210" height="33" alt="Coin Ledger"></a></h4>
+                <h4><a target="_blank" href="https://coinledger.io"><img src="images/coinledger.png" width="210" height="33" alt="Coin Ledger"></a></h4>
                 <p class="lead">I built this as a way to keep track of my Bitcoin transactions, which are spread across a few different wallets and exchanges.</p>
             </li>
             <li>
@@ -210,11 +214,27 @@
     experience: [
         {
             company:    "CreativeLive",
-            url:        "http://www.creativelive.com/",
+            url:        "https://www.creativelive.com/",
             location:   "San Francisco, CA",
             start_date: "2014-05-05",
             end_date:   undefined,
             job_title:  "Director of Engineering"
+        },
+        {
+            company:    "theBoardlist",
+            url:        "https://theboardlist.com/",
+            location:   "San Francisco, CA",
+            start_date: "2015-09-01",
+            end_date:   undefined,
+            job_title:  "Principal Engineer"
+        },
+        {
+            company:    "Coin Ledger",
+            url:        "https://coinledger.io/",
+            location:   "San Francisco, CA",
+            start_date: "2014-02-05",
+            end_date:   undefined,
+            job_title:  "Everything"
         },
         {
             company:    "TalkTo",
