--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </li>
             <li>
                 <h4><a target="_blank" href="https://theboardlist.com"><img src="https://dtlk3t7g5mpz3.cloudfront.net/images/theBoardlist_Logo.png" width="183" height="24" alt="theBoardlist"></a></h4>
-                <p class="lead">Built out the current version of the website and web app for theBoardlist, which is a professional network that facilitates placing women on company boards</p>
+                <p class="lead">Built out the current version of the website and web app for theBoardlist, which is a professional network that facilitates placing women on company boards.</p>
             </li>
             <!-- <li>
                 <h4><a target="_blank" href="http://currencycheatsheet.com"><img src="images/currency-cheatsheet.png" width="318" height="45" alt="Currency Cheatsheet"></a></h4>
