--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <ul class="highlights list-unstyled">
             <li>
                 <h4><a target="_blank" href="https://www.creativelive.com/"><img src="images/creativelive.png" width="318" height="24" alt="CreativeLive"></a></h4>
-                <p class="lead">I'm curently Director of Engineering at CreativeLive.</p>
+                <p class="lead">I'm currently Director of Engineering at CreativeLive.</p>
             </li>
             <li>
                 <h4><a target="_blank" href="https://theboardlist.com"><img src="https://dtlk3t7g5mpz3.cloudfront.net/images/theBoardlist_Logo.png" width="183" height="24" alt="theBoardlist"></a></h4>
