--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       </li>
     </ul>
 
-    <h2><a target="_blank" href="https://docs.google.com/a/jimmybyrum.com/document/d/17UCmeKenZhOTrxTuvhv6TN_egX9dQDeNRul_mgYSs-M/edit">Resume</a> on Google Docs</h2>
+    <h2><a target="_blank" href="http://bit.ly/jimmy-byrum-resume">Resume</a> on Google Docs</h2>
 
   </div>
   <div class="col-lg-6 col-lg-pull-6 editor-cx">
@@ -223,7 +223,7 @@
     url:          'https://theboardlist.com',
     location:     'San Francisco, CA',
     start_date:   new Date('2015-09-01'),
-    end_date:     undefined,
+    end_date:     new Date('2018-01-29'),
     job_title:    'Principal Engineer'
   }, {
     company:      'Coin Ledger',
