Fix for broken images after closing flickr account

--- a/index.html
+++ b/index.html
@@ -35,106 +35,33 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner match-parent vertical horizontal">
 
-    <div id="photo-llao-llao" class="item active match-parent vertical horizontal">
-      <div class="carousel-caption">
-      <a target="_blank" href="http://www.flickr.com/photos/jimmybyrum/3329496538/in/set-72157614740957803">Llao Llao</a>
+      <div id="photo-llao-llao" class="item active match-parent vertical horizontal">
+        <div class="carousel-caption">Llao Llao</div>
       </div>
-    </div>
 
-    <div id="photo-camino" class="item match-parent vertical horizontal">
-      <div class="carousel-caption">
-      <a target="_blank" href="http://www.flickr.com/photos/jimmybyrum/3469215354/in/set-72157614695534395">En camino</a>
+      <div id="photo-el-chalten" class="item match-parent vertical horizontal">
+        <div class="carousel-caption">El Chaltén</div>
       </div>
-    </div>
 
-    <div id="photo-camino2" class="item match-parent vertical horizontal">
-      <div class="carousel-caption">
-      <a target="_blank" href="http://www.flickr.com/photos/jimmybyrum/3324794488/in/set-72157608634447557">En camino</a>
+      <div id="photo-bariloche" class="item match-parent vertical horizontal">
+        <div class="carousel-caption">Bariloche</div>
       </div>
-    </div>
 
-    <div id="photo-bulnes" class="item match-parent vertical horizontal">
-      <div class="carousel-caption">
-      <a target="_blank" href="http://www.flickr.com/photos/jimmybyrum/3080309415/in/set-72157610630796711">Patagonia</a>
+      <div id="photo-valle-luna" class="item match-parent vertical horizontal">
+        <div class="carousel-caption">Valle de la Luna</div>
       </div>
-    </div>
 
-    <div id="photo-el-chalten" class="item match-parent vertical horizontal">
-      <div class="carousel-caption">
-      <a target="_blank" href="http://www.flickr.com/photos/jimmybyrum/3324907754/in/set-72157614754257706">El Chaltén</a>
+      <div id="photo-lago-titicaca" class="item match-parent vertical horizontal">
+        <div class="carousel-caption">Lago Titicaca</div>
       </div>
-    </div>
 
-    <div id="photo-los-antiguos" class="item match-parent vertical horizontal">
-      <div class="carousel-caption">
-      <a target="_blank" href="http://www.flickr.com/photos/jimmybyrum/3324099993/in/set-72157614684570981">Los Antiguos</a>
+      <div id="photo-antarctica" class="item match-parent vertical horizontal">
+        <div class="carousel-caption">Antarctica</div>
       </div>
-    </div>
 
-    <div id="photo-bariloche" class="item match-parent vertical horizontal">
-      <div class="carousel-caption">
-      <a target="_blank" href="http://www.flickr.com/photos/jimmybyrum/3328670041/in/set-72157614813010890">Bariloche</a>
+      <div id="photo-morocco" class="item match-parent vertical horizontal">
+        <div class="carousel-caption">Morocco</div>
       </div>
-    </div>
-
-    <div id="photo-villarrica" class="item match-parent vertical horizontal">
-      <div class="carousel-caption">
-      <a target="_blank" href="http://www.flickr.com/photos/jimmybyrum/3343451510/in/set-72157615048067114">Volcán Villarrica</a>
-      </div>
-    </div>
-
-    <div id="photo-iquique" class="item match-parent vertical horizontal">
-      <div class="carousel-caption">
-      <a target="_blank" href="http://www.flickr.com/photos/jimmybyrum/3383669428/in/set-72157615774277029/">Iquique</a>
-      </div>
-    </div>
-
-    <div id="photo-valle-luna" class="item match-parent vertical horizontal">
-      <div class="carousel-caption">
-      <a target="_blank" href="http://www.flickr.com/photos/jimmybyrum/3384078414/in/set-72157615868101756/">Valle de la Luna</a>
-      </div>
-    </div>
-
-    <div id="photo-canon-colca" class="item match-parent vertical horizontal">
-      <div class="carousel-caption">
-      <a target="_blank" href="http://www.flickr.com/photos/jimmybyrum/3399780195/in/set-72157616059247883">Cañon del Colca</a>
-      </div>
-    </div>
-
-    <div id="photo-lago-titicaca" class="item match-parent vertical horizontal">
-      <div class="carousel-caption">
-      <a target="_blank" href="http://www.flickr.com/photos/jimmybyrum/3430361284/in/set-72157616510652693/">Lago Titicaca</a>
-      </div>
-    </div>
-
-    <div id="photo-cuba" class="item match-parent vertical horizontal">
-      <div class="carousel-caption">
-      <a target="_blank" href="http://www.flickr.com/photos/jimmybyrum/3682888548/in/set-72157620873168152">La Habana</a>
-      </div>
-    </div>
-    <div id="photo-lipie" class="item match-parent vertical horizontal">
-      <div class="carousel-caption">
-      <a target="_blank" href="http://www.flickr.com/photos/jimmybyrum/4914340007/in/set-72157624652932379">Липя</a>
-      </div>
-    </div>
-
-    <div id="photo-antarctica" class="item match-parent vertical horizontal">
-      <div class="carousel-caption">
-      <a target="_blank" href="http://www.flickr.com/photos/jimmybyrum/3129833118/in/set-72157611541153932">Antarctica</a>
-      </div>
-    </div>
-
-    <div id="photo-morocco" class="item match-parent vertical horizontal">
-      <div class="carousel-caption">
-      <a target="_blank" href="http://www.flickr.com/photos/jimmybyrum/5865859815/in/set-72157627039451704">Morocco</a>
-      </div>
-    </div>
-
-    <div id="photo-sahara" class="item match-parent vertical horizontal">
-      <div class="carousel-caption">
-      <a target="_blank" href="http://www.flickr.com/photos/jimmybyrum/5878841708/in/set-72157626938961565">Sahara Desert</a>
-      </div>
-    </div>
 
     </div>
 
