adding Vipps and some css fixes

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 
     <ul class="highlights list-unstyled">
       <li>
-        <h4>Traveling with the family</h4>
-        <p class="lead">I'm currently taking time away from full-time work to travel in Europe with my family. I'm definitely interested in living &amp; working in Europe again, so if you think you'd like to work with me, please reach out.</p>
+        <h4><a target="_blank" href="https://www.vipps.no/"><img src="images/vipps.svg" width="150" height="38" alt="Vipps"></a></h4>
+        <p class="lead">I started working with Vipps in 2018 after moving to Norway. My first year with Vipps was spent almost entirely focused on recruiting. After bringing lots of great developers to the team, I focused on Tech Strategy, Career Paths and Development Planning, as well as working with some teams operationally when needed.</p>
       </li>
       <li>
         <h4><a target="_blank" href="https://www.creativelive.com/"><img src="images/creativelive.png" width="318" height="24" alt="CreativeLive"></a></h4>
@@ -139,6 +139,13 @@
     <div id="editor">let resume = {
   name: 'James Byrum',
   experience: [{
+    company:      'Vipps',
+    url:          'https://www.vipps.no',
+    location:     'Oslo, Norway',
+    start_date:   new Date('2018-08-06'),
+    end_date:     undefined,
+    job_title:    'Engineering Manager'
+  }, {
     company:      'CreativeLive',
     url:          'https://www.creativelive.com',
     location:     'San Francisco, CA',
@@ -234,8 +241,6 @@
   <ul class="social list-unstyled list-inline row wrap-content">
     <li><a title="GitHub" data-placement="bottom" target="_blank" class="github" href="http://github.com/jimmybyrum"><i class="fa fa-github-square"></i></a></li>
     <li><a title="LinkedIn" data-placement="bottom" target="_blank" class="linkedin" href="http://linkedin.com/in/jimmybyrum"><i class="fa fa-linkedin-square"></i></a></li>
-    <li><a title="Flickr" data-placement="bottom" target="_blank" class="flickr" href="http://www.flickr.com/photos/jimmybyrum/"><i class="fa fa-flickr"></i></a></li>
-    <li><a title="Strava" data-placement="bottom" target="_blank" class="strava" href="http://www.strava.com/athletes/424412"><i class="fa fa-strava-square"></i></a></li>
     <li><a title="me@jimmybyrum.com" data-placement="bottom" target="_blank" class="email" href="mailto:me@jimmybyrum.com?subject=Wow%2C%20what%20an%20amazing%20website%21"><i class="fa fa-pencil-square"></i></a></li>
   </ul>
 </footer>
