--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       </li>
       <li>
         <h4><a target="_blank" href="http://www.ingles.mineduc.cl/"><img src="images/minudec.png" width="200" height="71" alt="Chilean Ministry of Education"></a></h4>
-        <p class="lead">I took some time off in 2008 to be a volunteer English teacher in Chile. For six months, I taught at Liceo Polivalente Hernando de Magallanes in <a target="_blank" href="http://www.flickr.com/photos/jimmybyrum/sets/72157606769792487/">Porvenir</a>, which is a small town on the Tierra del Fuego. After that, I traveled for six months, starting in <a target="_blank" href="http://www.flickr.com/photos/jimmybyrum/sets/72157611541153932/">Antarctica</a> and then making my way north along the Andes.</p>
+        <p class="lead">I took some time off in 2008 to be a volunteer English teacher in Chile. For six months, I taught at Liceo Polivalente Hernando de Magallanes in Porvenir, which is a small town on the Tierra del Fuego. After that, I traveled for six months, starting in Antarctica and then making my way north along the Andes.</p>
       </li>
       <li>
         <h4><a target="_blank" href="http://yahoo.com"><img src="images/yahoo.png" width="142" height="37" alt="Yahoo!"></a></h4>
